--- a/deploy/helm/chatcli/templates/rbac.yaml
+++ b/deploy/helm/chatcli/templates/rbac.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.rbac.create -}}
+{{- if .Values.rbac.clusterWide }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -44,4 +45,51 @@ subjects:
   - kind: ServiceAccount
     name: {{ include "chatcli.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
+{{- else }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ include "chatcli.fullname" . }}
+  labels:
+    {{- include "chatcli.labels" . | nindent 4 }}
+rules:
+  # Core resources for watcher mode (namespace-scoped)
+  - apiGroups: [""]
+    resources: ["pods", "pods/log", "events", "services", "endpoints"]
+    verbs: ["get", "list", "watch"]
+  # Apps resources
+  - apiGroups: ["apps"]
+    resources: ["deployments", "replicasets", "statefulsets", "daemonsets"]
+    verbs: ["get", "list", "watch"]
+  # Autoscaling
+  - apiGroups: ["autoscaling"]
+    resources: ["horizontalpodautoscalers"]
+    verbs: ["get", "list", "watch"]
+  # Networking
+  - apiGroups: ["networking.k8s.io"]
+    resources: ["ingresses"]
+    verbs: ["get", "list", "watch"]
+  # Metrics (for resource usage)
+  - apiGroups: ["metrics.k8s.io"]
+    resources: ["pods"]
+    verbs: ["get", "list"]
+  {{- with .Values.rbac.additionalRules }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "chatcli.fullname" . }}
+  labels:
+    {{- include "chatcli.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ include "chatcli.fullname" . }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "chatcli.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
+{{- end }}
 {{- end }}
